--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 
     <body>
         <h1>Título Nuevo Modificado!</h1>
+
+        <form action="#" method="GET">
+            <input type="button" value="Enviar">
+        </form>
     </body>
 </html>
